Name:                ratehs
Version:             0.1
Synopsis:            rate web app
Description:         web app for rating things, to remember what was good
License:             GPL-2
Author:              Matthias Beyer
Maintainer:          mail@beyermatthias.de
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: True

Executable ratehs
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
      base ==4.*
    , bytestring
    , heist
    , lens
    , mtl
    , postgresql-simple
    , snap
    , snap-core
    , snap-loader-static
    , snap-server
    , snaplet-postgresql-simple
    , text
    , time
    , transformers
    , xmlhtml
    , MonadCatchIO-transformers

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options:
      -DDEVELOPMENT
    ghc-options:
      -threaded -w
  else
    ghc-options:
      -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans -fno-warn-unused-do-bind
